# rewards-program

./: Cargo.toml  README.md  cargo-nightly  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  pull-request.yml
ci/: cargo-build-test-sbf.sh  do-audit.sh  install-build-deps.sh  read-cargo-variable.sh  rust-nightly.sh  rust-version.sh  solana-version.sh
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/test/: increment.test.ts  test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json
program/proptest-regressions/: processor.txt
program/src/: constants.rs  error.rs  extra_metas.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: close_holder_rewards.rs  deposit.rs  distribute_rewards.rs  e2e.rs  execute_utils.rs  harvest_rewards.rs  initialize_holder_rewards.rs  initialize_holder_rewards_pool.rs  setup.rs  sweep_rewards.rs  transfer_hook.rs  withdraw.rs
scripts/: generate-clients.mjs  utils.mjs
scripts/client/: lint-rust.mjs
scripts/program/: build.mjs  format.mjs  lint.mjs
src/: entrypoint.rs  error.rs  extra_metas.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: distribute_rewards.rs  harvest_rewards.rs  initialize_holder_rewards.rs  initialize_holder_rewards_pool.rs  initialize_mint_reward_info.rs  setup.rs
