[package]
name = "paladin-rewards-program"
version = "0.1.0"
description = "Paladin Rewards Program"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.16.0"
solana-program = "1.18.14"
spl-program-error = "0.4.0"
spl-transfer-hook-interface = "0.6.3"

[dev-dependencies]

[features]
bpf-entrypoint = []
test-sbf = []
