[package]
name = "paladin-rewards-program"
version = "0.1.0"
description = "Paladin Rewards Program"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.16.0"
solana-program = "1.18.14"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-program-error = "0.4.0"
spl-tlv-account-resolution = "0.6.3"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.3"

[dev-dependencies]

[features]
bpf-entrypoint = []
test-sbf = []
