[package]
name = "paladin-rewards-program"
version = "0.0.1"
description = "Paladin Rewards Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.16.0"
num-derive = "0.3"
num-traits = "0.2"
shank = "0.4.2"
solana-program = "2.0.2"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "0.7.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5.0"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
spl-pod = "0.3.0"
spl-type-length-value = "0.5.0"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "2XNqZeXtemZ1FjrkVsssPPE9AVAVjTSoaqb53EnNQ1fe"
