[package]
name = "paladin-rewards-program"
version = "0.0.1"
description = "Paladin Rewards Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.16.0"
num-derive = "0.3"
num-traits = "0.2"
shank = "0.4.2"
solana-program = "2.1.4"
solana-sdk = "2.1.4"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "0.7.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5.0"
solana-program-test = "2.1.4"
solana-sdk = "2.1.4"
spl-pod = "0.3.0"
spl-type-length-value = "0.5.0"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "7LdHk6jnrY4kJW79mVXshTzduvgn3yz4hZzHpzTbt7Ph"
