[package]
name = "paladin-rewards-program-client"
version = "0.0.1"
description = "Paladin Rewards Program Client"
readme = "../../README.md"
edition = "2021"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "2.0.2"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
