[package]
name = "paladin-rewards-program-client"
version = "0.0.1"
description = "A generated Rust library for the Rewards program"
repository = "https://github.com/paladin-bladesmith/rewards-program"
edition = "2021"
readme = "README.md"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~2.1"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~2.1"
solana-sdk = "~2.1"
